fixed issue with footer not sticking to button by wrapping outlet in some bootstrap

--- a/src/Layout/home.css
+++ b/src/Layout/home.css
@@ -1,4 +1,6 @@
-.home-layout .main {
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+
+.main {
     border: none;  
     padding: 0;    
     margin: 0; 
